--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tinder for devs",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon src/app.js"
+    "start": "nodemon src/app.js"
   },
   "keywords": [
     "nodejs",
@@ -13,7 +13,11 @@
   "author": "Yeluri Sesha Sai",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.20.0",
     "nodemon": "^3.1.11"
   }
 }
